--- a/diapositiva1.html
+++ b/diapositiva1.html
@@ -76,7 +76,7 @@
 <body>
     <div class="slide">
         <h1>Art. 367: Concepto de Escisión</h1>
-        <p>Por la escisión una sociedad fracciona su patrimonio en dos o más bloques para transferirlos íntegramente a otras sociedades o para conservar uno de ellos, cumpliendo los requisitos y las formalidades prescritas por esta ley.</p>
+        <p>jjhjhjjhj</p>
 
         <!-- Rectángulo fragmentado con separador -->
         <div class="rectangle">
